# e-waste-project

./: .gitignore  LICENSE  README.md  biome.json  bun.lockb  package.json  pnpm-lock.yaml  turbo.json
apps/api/: package.json
apps/api/src/: data.ts  disposal.json  index.ts  locations.json
apps/ml/: package.json  pyproject.toml  train_model.ipynb
apps/ml/ml/: main.py
apps/web/: package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/alt/: page.tsx
apps/web/app/client/: page.tsx
apps/web/app/client/localonly/: page.tsx
apps/web/app/tests/client/: page.tsx
apps/web/app/tests/client/localonly/: page.tsx
apps/web/app/tests/server/: page.tsx
apps/web/app/ws/: page.tsx
apps/web/components/: file-upload.tsx  form.tsx  response-settings.tsx  streaming-response.tsx  video-stream.tsx
apps/web/lib/: constants.ts  store.ts
apps/yolo/: package.json  pyproject.toml
apps/yolo/runs/detect/train/: args.yaml
apps/yolo/training_and_data/: data.yaml  main.py
apps/yolo/training_and_data/runs/detect/train/: events.out.tfevents.1740754362.DESKTOP-TO9IFV4.3052.0  results.csv
apps/yolo/training_and_data/train/: labels.cache
apps/yolo/training_and_data/valid/: labels.cache
apps/yolo/yolo/: config.py  main.py  test.py
apps/yolo/yolo/core/: model.py
apps/yolo/yolo/models/: detection.py
apps/yolo/yolo/routers/: file_upload.py  index.py  localonly.py  webrtc.py  websocket.py
apps/yolo/yolo/tracks/: base.py  client_track.py  yolo_track.py
apps/yolo/yolo/utils/: logger.py  webrtc_utils.py
